Css: Main footer, make the staff links vertical align correctly.

--- a/deploy/www/css/style.css
+++ b/deploy/www/css/style.css
@@ -1591,6 +1591,7 @@ a#skip-to-bottom{
     min-height:80px;
     margin-left:10%;
     position:relative;
+    vertical-align:top;
 }
 #footer-authors .avatar{
     position:absolute;
